[project]
name = "violetear"
version = "0.13.1"
description = "Full-Stack Web Development Framework for Pythonistas"
readme = "README.md"
authors = [
    { name = "Alejandro Piad", email = "apiad@apiad.net" }
]
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
server = ["fastapi[standard]>=0.124.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["violetear"]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
