[project]
name = "violetear"
version = "1.2.3"
description = "Full-Stack Web Development Framework for Pythonistas"
readme = "README.md"
authors = [
    { name = "Alejandro Piad", email = "apiad@apiad.net" }
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
server = ["fastapi[standard]>=0.124.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["violetear"]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.setuptools.package-data]
violetear = ["*.png"]
