[project]
name = "violetear"
version = "1.4.1"
description = "Full-Stack Web Development Framework for Pythonistas"
readme = "README.md"
authors = [
    { name = "Alejandro Piad", email = "apiad@apiad.net" }
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
server = ["fastapi[standard]>=0.124.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["violetear"]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-playwright>=0.5",
    "httpx>=0.25.0",
    "uvicorn>=0.29.0",
    "fastapi[standard]>=0.124.0",
    "pydantic>=2.0.0",
]

[tool.setuptools.package-data]
violetear = ["*.png"]

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end browser tests via Playwright (slow; run separately from the fast unit gate)",
]
# Default pytest run excludes e2e — invoke `pytest -m e2e` or `make e2e` to run them.
addopts = "-m 'not e2e'"
